--- a/environment.yml
+++ b/environment.yml
@@ -78,7 +78,7 @@ dependencies:
   - pyrsistent=0.14.11=py37h7b6447c_0
   - python=3.7.3=h0371630_0
   - python-dateutil=2.8.0=py37_0
-  - pytorch=1.2.0=py3.7_cuda10.0.130_cudnn7.6.2_0
+  - pytorch=2.3.1
   - pyzmq=18.0.0=py37he6710b0_0
   - qt=5.9.7=h5867ecd_1
   - qtconsole=4.4.3=py37_0
