--- a/environment.yml
+++ b/environment.yml
@@ -100,7 +100,7 @@ dependencies:
   - widgetsnbextension=3.4.2=py37_0
   - xz=5.2.4=h14c3975_4
   - zeromq=4.3.1=he6710b0_3
-  - zlib=1.2.11=h7b6447c_3
+  - zlib
   - zstd=1.3.7=h0b5b093_0
   - pip:
     - adabound==0.0.5
