--- a/environment.yml
+++ b/environment.yml
@@ -76,7 +76,7 @@ dependencies:
   - pygments=2.3.1=py37_0
   - pyqt=5.9.2=py37h05f1152_2
   - pyrsistent=0.14.11=py37h7b6447c_0
-  - python=3.7.3=h0371630_0
+  - python=3.11
   - python-dateutil=2.8.0=py37_0
   - pytorch=2.3.1
   - pyzmq=18.0.0=py37he6710b0_0
