--- a/environment.yml
+++ b/environment.yml
@@ -57,10 +57,10 @@ dependencies:
   - ncurses=6.1=he6710b0_1
   - ninja=1.9.0=py37hfd86e86_0
   - notebook=5.7.8=py37_0
-  - numpy=1.16.2=py37h7e9f1db_0
-  - numpy-base=1.16.2=py37hde5b4d6_0
+  - numpy
+  - numpy-base
   - olefile=0.46=py37_0
-  - openssl=1.1.1c=h7b6447c_1
+  - openssl
   - pandoc=2.2.3.2=0
   - pandocfilters=1.4.2=py37_1
   - parso=0.3.4=py37_0
@@ -82,7 +82,7 @@ dependencies:
   - pyzmq=18.0.0=py37he6710b0_0
   - qt=5.9.7=h5867ecd_1
   - qtconsole=4.4.3=py37_0
-  - readline=7.0=h7b6447c_5
+  - readline
   - send2trash=1.5.0=py37_0
   - setuptools=40.8.0=py37_0
   - sip=4.19.8=py37hf484d3e_0
@@ -98,7 +98,7 @@ dependencies:
   - webencodings=0.5.1=py37_1
   - wheel=0.33.1=py37_0
   - widgetsnbextension=3.4.2=py37_0
-  - xz=5.2.4=h14c3975_4
+  - xz
   - zeromq=4.3.1=he6710b0_3
   - zlib
   - zstd=1.3.7=h0b5b093_0
