--- a/environment.yml
+++ b/environment.yml
@@ -3,7 +3,7 @@ channels:
   - pytorch
   - defaults
 dependencies:
-  - attrs=19.1.0=py37_1
+  - attrs
   - backcall=0.1.0=py37_0
   - blas=1.0=mkl
   - bleach=3.1.0=py37_0
@@ -38,7 +38,7 @@ dependencies:
   - jupyter_core=4.4.0=py37_0
   - libedit=3.1.20181209=hc058e9b_0
   - libffi=3.2.1=hd88cf55_4
-  - libgcc-ng=8.2.0=hdf63c60_1
+  - libgcc-ng
   - libgfortran-ng=7.3.0=hdf63c60_0
   - libpng=1.6.36=hbc83047_0
   - libsodium=1.0.16=h1bed415_0
@@ -54,7 +54,7 @@ dependencies:
   - mkl_random=1.0.2=py37hd81dba3_0
   - nbconvert=5.4.1=py37_3
   - nbformat=4.4.0=py37_0
-  - ncurses=6.1=he6710b0_1
+  - ncurses
   - ninja=1.9.0=py37hfd86e86_0
   - notebook=5.7.8=py37_0
   - numpy
@@ -87,10 +87,10 @@ dependencies:
   - setuptools=40.8.0=py37_0
   - sip=4.19.8=py37hf484d3e_0
   - six=1.12.0=py37_0
-  - sqlite=3.27.2=h7b6447c_0
+  - sqlite
   - terminado=0.8.1=py37_1
   - testpath=0.4.2=py37_0
-  - tk=8.6.8=hbc83047_0
+  - tk
   - torchvision=0.19.0
   - tornado=6.0.2=py37h7b6447c_0
   - traitlets=4.3.2=py37_0
