--- a/environment.yml
+++ b/environment.yml
@@ -91,7 +91,7 @@ dependencies:
   - terminado=0.8.1=py37_1
   - testpath=0.4.2=py37_0
   - tk
-  - torchvision=0.19.0
+  - torchvision
   - tornado=6.0.2=py37h7b6447c_0
   - traitlets=4.3.2=py37_0
   - wcwidth=0.1.7=py37_0
