--- a/environment.yml
+++ b/environment.yml
@@ -4,7 +4,7 @@ channels:
   - defaults
 dependencies:
   - attrs
-  - backcall=0.1.0=py37_0
+  - backcall
   - blas=1.0=mkl
   - bleach=3.1.0=py37_0
   - ca-certificates=2019.5.15=1
@@ -37,14 +37,14 @@ dependencies:
   - jupyter_console=6.0.0=py37_0
   - jupyter_core=4.4.0=py37_0
   - libedit=3.1.20181209=hc058e9b_0
-  - libffi=3.2.1=hd88cf55_4
+  - libffi
   - libgcc-ng
   - libgfortran-ng=7.3.0=hdf63c60_0
   - libpng=1.6.36=hbc83047_0
   - libsodium=1.0.16=h1bed415_0
-  - libstdcxx-ng=8.2.0=hdf63c60_1
+  - libstdcxx-ng
   - libtiff=4.0.10=h2733197_2
-  - libuuid=1.0.3=h1bed415_2
+  - libuuid
   - libxcb=1.13=h1bed415_1
   - libxml2=2.9.9=he19cac6_0
   - markupsafe=1.1.1=py37h7b6447c_0
