--- a/environment.yml
+++ b/environment.yml
@@ -6,10 +6,10 @@ dependencies:
   - attrs
   - backcall
   - blas=1.0=mkl
-  - bleach=3.1.0=py37_0
+  - bleach
   - ca-certificates=2019.5.15=1
-  - certifi=2019.6.16=py37_1
-  - cffi=1.12.2=py37h2e261b9_1
+  - certifi
+  - cffi
   - cudatoolkit=10.0.130=0
   - dbus=1.13.6=h746ee38_0
   - decorator=4.4.0=py37_1
@@ -80,7 +80,7 @@ dependencies:
   - python-dateutil=2.8.0=py37_0
   - pytorch=2.3.1
   - pyzmq=18.0.0=py37he6710b0_0
-  - qt=5.9.7=h5867ecd_1
+  - qt
   - qtconsole=4.4.3=py37_0
   - readline
   - send2trash=1.5.0=py37_0
@@ -97,7 +97,7 @@ dependencies:
   - wcwidth=0.1.7=py37_0
   - webencodings=0.5.1=py37_1
   - wheel=0.33.1=py37_0
-  - widgetsnbextension=3.4.2=py37_0
+  - widgetsnbextension
   - xz
   - zeromq=4.3.1=he6710b0_3
   - zlib
