--- a/environment.yml
+++ b/environment.yml
@@ -78,7 +78,7 @@ dependencies:
   - pyrsistent=0.14.11=py37h7b6447c_0
   - python=3.11
   - python-dateutil=2.8.0=py37_0
-  - pytorch=2.3.1
+  - pytorch
   - pyzmq=18.0.0=py37he6710b0_0
   - qt
   - qtconsole=4.4.3=py37_0
