--- a/environment.yml
+++ b/environment.yml
@@ -18,7 +18,7 @@ dependencies:
   - expat=2.2.6=he6710b0_0
   - fontconfig=2.13.0=h9420a91_0
   - freetype=2.9.1=h8a8886c_1
-  - glib=2.56.2=hd408876_0
+  - glib
   - gmp=6.1.2=h6c8ec71_1
   - gst-plugins-base=1.14.0=hbbd80ab_1
   - gstreamer=1.14.0=hb453b48_1
@@ -96,7 +96,7 @@ dependencies:
   - traitlets=4.3.2=py37_0
   - wcwidth=0.1.7=py37_0
   - webencodings=0.5.1=py37_1
-  - wheel=0.33.1=py37_0
+  - wheel
   - widgetsnbextension
   - xz
   - zeromq=4.3.1=he6710b0_3
