--- a/environment.yml
+++ b/environment.yml
@@ -12,7 +12,7 @@ dependencies:
   - cffi
   - cudatoolkit=10.0.130=0
   - dbus=1.13.6=h746ee38_0
-  - decorator=4.4.0=py37_1
+  - decorator
   - defusedxml=0.5.0=py37_1
   - entrypoints=0.3=py37_0
   - expat=2.2.6=he6710b0_0
