--- a/environment.yml
+++ b/environment.yml
@@ -13,7 +13,7 @@ dependencies:
   - cudatoolkit=10.0.130=0
   - dbus=1.13.6=h746ee38_0
   - decorator
-  - defusedxml=0.5.0=py37_1
+  - defusedxml
   - entrypoints=0.3=py37_0
   - expat=2.2.6=he6710b0_0
   - fontconfig=2.13.0=h9420a91_0
