--- a/environment.yml
+++ b/environment.yml
@@ -14,7 +14,7 @@ dependencies:
   - dbus=1.13.6=h746ee38_0
   - decorator
   - defusedxml
-  - entrypoints=0.3=py37_0
+  - entrypoints
   - expat=2.2.6=he6710b0_0
   - fontconfig=2.13.0=h9420a91_0
   - freetype=2.9.1=h8a8886c_1
