--- a/environment.yml
+++ b/environment.yml
@@ -25,8 +25,8 @@ dependencies:
   - icu=58.2=h9c2bf20_1
   - intel-openmp=2019.3=199
   - ipykernel
-  - ipython=7.4.0=py37h39e3cac_0
-  - ipython_genutils=0.2.0=py37_0
+  - ipython
+  - ipython_genutils
   - ipywidgets=7.4.2=py37_0
   - jedi=0.13.3=py37_0
   - jinja2=2.10=py37_0
