--- a/environment.yml
+++ b/environment.yml
@@ -32,10 +32,10 @@ dependencies:
   - jinja2
   - jpeg=9b=h024ee3a_2
   - jsonschema
-  - jupyter=1.0.0=py37_7
-  - jupyter_client=5.2.4=py37_0
-  - jupyter_console=6.0.0=py37_0
-  - jupyter_core=4.4.0=py37_0
+  - jupyter
+  - jupyter_client
+  - jupyter_console
+  - jupyter_core
   - libedit=3.1.20181209=hc058e9b_0
   - libffi
   - libgcc-ng
