--- a/environment.yml
+++ b/environment.yml
@@ -47,55 +47,55 @@ dependencies:
   - libuuid
   - libxcb=1.13=h1bed415_1
   - libxml2=2.9.9=he19cac6_0
-  - markupsafe=1.1.1=py37h7b6447c_0
-  - mistune=0.8.4=py37h7b6447c_0
+  - markupsafe
+  - mistune
   - mkl=2019.3=199
-  - mkl_fft=1.0.10=py37ha843d7b_0
-  - mkl_random=1.0.2=py37hd81dba3_0
-  - nbconvert=5.4.1=py37_3
-  - nbformat=4.4.0=py37_0
+  - mkl_fft
+  - mkl_random
+  - nbconvert
+  - nbformat
   - ncurses
-  - ninja=1.9.0=py37hfd86e86_0
-  - notebook=5.7.8=py37_0
+  - ninja
+  - notebook
   - numpy
   - numpy-base
-  - olefile=0.46=py37_0
+  - olefile
   - openssl
   - pandoc=2.2.3.2=0
-  - pandocfilters=1.4.2=py37_1
-  - parso=0.3.4=py37_0
+  - pandocfilters
+  - parso
   - pcre=8.43=he6710b0_0
-  - pexpect=4.6.0=py37_0
-  - pickleshare=0.7.5=py37_0
-  - pillow=5.4.1=py37h34e0f95_0
-  - pip=19.0.3=py37_0
-  - prometheus_client=0.6.0=py37_0
-  - prompt_toolkit=2.0.9=py37_0
-  - ptyprocess=0.6.0=py37_0
-  - pycparser=2.19=py37_0
-  - pygments=2.3.1=py37_0
-  - pyqt=5.9.2=py37h05f1152_2
-  - pyrsistent=0.14.11=py37h7b6447c_0
+  - pexpect
+  - pickleshare
+  - pillow
+  - pip
+  - prometheus_client
+  - prompt_toolkit
+  - ptyprocess
+  - pycparser
+  - pygments
+  - pyqt
+  - pyrsistent
   - python=3.11
-  - python-dateutil=2.8.0=py37_0
+  - python-dateutil
   - pytorch
   - pyzmq=18.0.0=py37he6710b0_0
   - qt
-  - qtconsole=4.4.3=py37_0
+  - qtconsole
   - readline
-  - send2trash=1.5.0=py37_0
-  - setuptools=40.8.0=py37_0
-  - sip=4.19.8=py37hf484d3e_0
-  - six=1.12.0=py37_0
+  - send2trash
+  - setuptools
+  - sip
+  - six
   - sqlite
-  - terminado=0.8.1=py37_1
-  - testpath=0.4.2=py37_0
+  - terminado
+  - testpath
   - tk
   - torchvision
-  - tornado=6.0.2=py37h7b6447c_0
-  - traitlets=4.3.2=py37_0
-  - wcwidth=0.1.7=py37_0
-  - webencodings=0.5.1=py37_1
+  - tornado
+  - traitlets
+  - wcwidth
+  - webencodings
   - wheel
   - widgetsnbextension
   - xz
